# netrisk

./: .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .vercelignore  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_GUIDELINES.md  README.md  README_Codespaces.md  SECURITY.md  STACKED_PR45_WORKFLOW.md  TEST_GAPS.md  UAT.md  WIKI.md  about.html  about.js  about.test.js  accessibility.js  accessibility.test.js  account.html  account.js  ai-logger.js  ai-runner.js  ai.js  ai.test.js  audio.js  audio.test.js  auth.js  babel.config.js  build.js  build.test.js  colors.js  colors.test.js  (+85 more)
.devcontainer/: devcontainer.json  start-dev.sh
.githooks/: pre-commit
.github/: automation-smoke-test.md  codex-pr-readiness.json  dependabot.yml  settings.yml
.husky/: pre-commit  pre-push
.jules/: sentinel.md
andreame-devices/: .env.example  .gitignore  README.md
api/: index.cjs  index.js  index.ts
backend/: admin-console.cts  admin-invites.cts  auth-attempt-throttle.cts  auth-repository.cjs  auth-repository.cts  auth.cjs  auth.cts  authored-modules.cts  authorization.cjs  authorization.cts  catalog-view.cts  community-mode-store.cjs  community-store.cjs  datastore-supabase.cjs  datastore-supabase.cts  datastore.cjs  datastore.cts  engine-content-store.cjs  event-broadcast.cts  game-session-store.cjs  game-session-store.cts  http-response.cts  json-file-store.cjs  json-file-store.cts  leaderboard-store.cjs  load-local-env.cjs  load-local-env.cts  maybe-async.cjs  maybe-async.cts  module-runtime.cts  (+19 more)
(+1652 files in other folders)
